# omniretarget

./: .gitignore  CONTEXT.md  MANIFEST.in  MIGRATION_SCOPE.md  README.md  error_record.md  pyproject.toml  refactor_plan.md  setup.py
docs/: MIGRATION_SCOPE.md  adam-pro-robot-only-summary.md  add-motion-format.md  add-robot-type.md  architecture-refactor-review.md  architecture-refactor-safety.md  asset-pruning.md  migration-notes.md  refactor-progress-summary.md  usage.md
docs/plans/: 2026-04-22-omniretarget-bootstrap-plan.md  2026-04-23-cli-pipelines-refactor-design.md  2026-04-23-cli-pipelines-refactor-plan.md  2026-04-23-omniretarget-conservative-cleanup-design.md  2026-04-23-omniretarget-conservative-cleanup-plan.md  2026-04-23-omniretarget-phase-roadmap-plan.md  2026-04-24-omniretarget-final-overview-cleanup-plan.md  2026-04-24-omniretarget-refactor-overview.md  2026-04-24-omniretarget-refactor-phase-plan.md  2026-04-24-solver-internal-split-design.md  2026-04-24-solver-internal-split-plan.md  2026-04-24-solver-utils-boundary-design.md  2026-04-24-solver-utils-boundary-plan.md  2026-04-24-src-compat-removal-decision.md  2026-04-24-src-compat-removal-plan.md  2026-04-24-utils-first-internal-split-plan.md
scripts/: convert_amass_smplx_to_npz.sh  convert_lafan_bvh_to_npy.sh  convert_optitrack_pkl_to_npz.sh  convert_to_mj.sh  eval.sh  quantitative_evaluation.sh  replay_viser.sh  retarget_batch_clips.sh  retarget_single_clip.sh  test_smoke.sh  viser_player.sh
scripts/data_process/: convert_amass_smplx_to_npz.sh  convert_data_format_mj.sh
scripts/parc/: audit_parc_height_origin.py  batch_parc_initial_aug_to_mj.sh  convert_parc_to_mj.sh  retry_failed_parc_to_mj.sh  run_parc_process.sh  vis_parc_batch.sh  vis_parc_process.sh
scripts/retargeting/: convert_amass_smplx_to_npz.sh  convert_lafan_bvh_to_npy.sh  convert_optitrack_pkl_to_npz.sh  eval.sh  (+5 more)
tests/: path_helpers.py  test_adam_pro_cli_smoke.py  test_adam_pro_data_conversion.py  test_adam_pro_foot_patch_collision_geoms.py  test_adam_pro_hand_end_effector_markers.py  test_adam_pro_largebox_scene_xml.py  test_adam_pro_model_refinement_contract.py  test_adam_pro_motion_mappings.py  test_adam_pro_object_interaction_mapping.py  test_adam_pro_robot_config.py  test_adam_pro_xml_urdf_consistency.py  test_batch_retarget_script_optitrack.py  test_cli_wrapper_scripts.py  test_config_runtime_resolution.py  test_convert_amass_script.py  test_convert_data_format_parc_mj.py  test_eval_contact_joint_defaults.py  test_final_package_layout.py  test_foot_sticking_contact_keys.py  test_lafan_bvh_to_npy_script.py  test_module_entrypoints.py  test_mujoco_query_seam.py  test_optitrack_converter_script.py  test_optitrack_grounding_preprocess.py  test_optitrack_motion_format.py  test_optitrack_pkl_to_npz_converter.py  test_package_paths.py  test_parallel_process_single_task_regression.py  test_parc_batch_process_to_mj.py  test_parc_batch_vis.py  test_parc_process.py  test_parc_vis_script.py  test_pipeline_boundaries.py  test_prep_amass_smplx_gender_handling.py  test_profiles.py  test_public_facades.py  test_quantitative_eval_script.py  test_repo_doc_boundaries.py  test_retargeter_imports.py  test_retargeting_augmentation.py  (+17 more)
(+176 files in other folders)
