[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holosoma-retargeting"
version = "0.1.0"
description = "Retargeting utilities for converting human motions to robot motions."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Amazon FAR Team" },
]
dependencies = [
    # Needs to ping numpy to 2.3.5;
    # reason: later numpy version such as 2.4 will trigger
    # "TypeError: only 0-dimensional arrays can be converted to Python scalars"
    # in yourdf/urdf.py::1078 when converting float(q)
    "numpy==2.3.5",
    "torch",
    "tqdm",
    "scipy",
    "matplotlib",
    "trimesh",
    "smplx",
    "jinja2",
    "mujoco",
    "viser",
    "robot_descriptions",
    "yourdfpy",
    "cvxpy",
    "libigl",
    "tyro",
]

[project.scripts]
omniretarget-retarget = "holosoma_retargeting.cli.single_retargeting:entrypoint"
omniretarget-batch = "holosoma_retargeting.cli.batch_retargeting:entrypoint"
omniretarget-eval = "holosoma_retargeting.cli.eval_retargeting:entrypoint"
omniretarget-replay = "holosoma_retargeting.cli.viser_player:entrypoint"
omniretarget-replay-body-vel = "holosoma_retargeting.cli.viser_body_vel_player:entrypoint"
omniretarget-convert = "holosoma_retargeting.cli.data_process.convert_data_format_mj:entrypoint"
omniretarget-prep-amass = "holosoma_retargeting.cli.data_process.prep_amass_smplx_for_rt:entrypoint"
omniretarget-prep-optitrack = "holosoma_retargeting.cli.data_process.prep_optitrack_for_rt:entrypoint"
omniretarget-extract-global-positions = "holosoma_retargeting.cli.data_process.extract_global_positions:entrypoint"

[dependency-groups]
dev = ["mypy", "ruff", "pytest"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["holosoma_retargeting*"]
