[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniretarget"
version = "0.1.0"
description = "Retargeting utilities for converting human motions to robot motions."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Amazon FAR Team" },
]
dependencies = [
    # Needs to ping numpy to 2.3.5;
    # reason: later numpy version such as 2.4 will trigger
    # "TypeError: only 0-dimensional arrays can be converted to Python scalars"
    # in yourdf/urdf.py::1078 when converting float(q)
    "numpy==2.3.5",
    "torch",
    "tqdm",
    "scipy",
    "matplotlib",
    "trimesh",
    "smplx",
    "jinja2",
    "mujoco",
    "viser",
    "robot_descriptions",
    "yourdfpy",
    "cvxpy",
    "libigl",
    "tyro",
    "PyYAML",
]

[dependency-groups]
dev = ["mypy", "ruff", "pytest"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["omniretarget*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-q",
    "--ignore=tests/test_prep_amass_smplx_gender_handling.py",
    "--ignore=tests/test_adam_pro_cli_smoke.py",
]
